website/websites/u64q/code/spectralnorm.6.shedskin.log

Fri, 10 Nov 2017 20:18:48 GMT

MAKE:
make[1]: Vstupuje se do adresáře „/home/dundee/workspace/benchmarksgame/bencher/tmp/spectralnorm/tmp“
cp spectralnorm.shedskin-6.shedskin shed.py
shedskin shed.py
*** SHED SKIN Python-to-C++ Compiler 0.9.4 ***
Copyright 2005-2011 Mark Dufour; License GNU GPL version 3 (See LICENSE)

[analyzing types..]
0% ********************************100% ********************************100% ********************************100%
[generating c++ code..]
*WARNING* shed.py:48: incompatible types
[elapsed time: 1.75 seconds]
make
make[2]: Vstupuje se do adresáře „/home/dundee/workspace/benchmarksgame/bencher/tmp/spectralnorm/tmp“
g++  -O2 -march=native -Wno-deprecated  -I. -I/usr/lib/python2.7/site-packages/shedskin/lib /home/dundee/workspace/benchmarksgame/bencher/tmp/spectralnorm/tmp/shed.cpp /usr/lib/python2.7/site-packages/shedskin/lib/sys.cpp /usr/lib/python2.7/site-packages/shedskin/lib/re.cpp /usr/lib/python2.7/site-packages/shedskin/lib/math.cpp /usr/lib/python2.7/site-packages/shedskin/lib/builtin.cpp -lgc -lpcre  -o shed
/home/dundee/workspace/benchmarksgame/bencher/tmp/spectralnorm/tmp/shed.cpp: In function ‘void* __shed__::__ss_main()’:
/home/dundee/workspace/benchmarksgame/bencher/tmp/spectralnorm/tmp/shed.cpp:118:47: error: cannot convert ‘__shedskin__::list<int>*’ to ‘__shedskin__::list<double>*’ in assignment
     u = ((new list<__ss_int>(1,1)))->__mul__(n);
                                               ^
make[2]: *** [Makefile:21: shed] Chyba 1
make[2]: Opouští se adresář „/home/dundee/workspace/benchmarksgame/bencher/tmp/spectralnorm/tmp“
make[1]: *** [/home/dundee/workspace/benchmarksgame/bencher/makefiles/my.linux.Makefile:30: spectralnorm.shedskin-6.shedskin_run] Chyba 2
make[1]: Opouští se adresář „/home/dundee/workspace/benchmarksgame/bencher/tmp/spectralnorm/tmp“
8.90s to complete and log all make actions

COMMAND LINE:
./shed 550

MAKE ERROR 

